# al-muwatta-ai

./: .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CONTRIBUTING.md  ENHANCEMENT_PLAN.md  INSTALLATION.md  INSTALL_OLLAMA_MANUAL.md  OLLAMA_SETUP.md  PROJECT_COMPLETE.md  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  cache_hadith.out  cache_hadith.py  cache_hadith_full.out  cache_quran.out  cache_quran.py  check_six_books.py  docker-compose.yml  example_usage.py  initialize_rag.py  install_ollama.sh  package-lock.json  package.json  populate_all_madhabs.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  scrape_and_populate_rag.py  scrape_maliki_books.py  start_app.sh  test_llm_with_cache.py  test_ollama.py
.github/workflows/: ci.yml
assets/: README.md
frontend/: .stylelintrc.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  index.css.backup
frontend/src/components/: BookmarkButton.tsx  BookmarksView.tsx  ChatMessage.tsx  ExportChat.tsx  FontSizeControl.tsx  HijriDate.tsx  MadhabSelector.tsx  PrayerTimesWidget.tsx  QiblaCompass.tsx  QuickActions.tsx  SettingsModal.tsx  SuggestionsButton.tsx  TasbeehCounter.tsx  UploadButton.tsx
frontend/src/lib/: api.ts  language-detector.ts  qibla.ts  utils.ts
frontend/src/styles/: prophetic-theme.css
qdrant_storage/: raft_state.json
qdrant_storage/collections/hanafi_fiqh/0/segments/0095ba2e-8986-4d7c-84b3-7fe9bfa49b62/: IDENTITY  LOG
qdrant_storage/collections/hanafi_fiqh/0/segments/1e5d17a8-1ed1-43c5-b9a8-f7fd654767b8/: IDENTITY  LOG
qdrant_storage/collections/hanafi_fiqh/0/segments/2a0f75e6-54a0-4259-9917-e63aaedb0859/: IDENTITY  LOG
qdrant_storage/collections/hanafi_fiqh/0/segments/4547c04a-296a-405a-a108-8d19b7fb99ee/: IDENTITY  LOG
qdrant_storage/collections/hanafi_fiqh/0/segments/5464b4c9-8032-4938-83c5-8025b93a9c92/: IDENTITY  LOG
qdrant_storage/collections/hanafi_fiqh/0/segments/5d387516-89a9-44ef-8ec2-0b00293e1520/: IDENTITY  LOG
qdrant_storage/collections/hanafi_fiqh/0/segments/62c72d4b-2ce8-4d9f-9fb2-8630e1e1dbe7/: IDENTITY  LOG
qdrant_storage/collections/hanafi_fiqh/0/segments/a0832e83-dd83-4a70-ad59-1b48c651b93a/: IDENTITY  LOG
qdrant_storage/collections/hanbali_fiqh/0/segments/0c9f5835-8041-4e46-9124-6beda298cb3b/: IDENTITY  LOG
qdrant_storage/collections/hanbali_fiqh/0/segments/4d8e6c17-335d-4eef-b61f-5d52da8e47ee/: IDENTITY  LOG
qdrant_storage/collections/hanbali_fiqh/0/segments/580a1f00-a5db-4bfb-9c8c-3328cd0a64bb/: IDENTITY  LOG
qdrant_storage/collections/hanbali_fiqh/0/segments/6a389077-511b-4f8b-84c5-67b3e38927f3/: IDENTITY  LOG
qdrant_storage/collections/hanbali_fiqh/0/segments/8f921996-8b33-4d90-b09f-f4cd5cff0d82/: IDENTITY  LOG
qdrant_storage/collections/hanbali_fiqh/0/segments/b2a4514f-c692-46e8-aff7-68481921c31c/: IDENTITY  LOG
qdrant_storage/collections/hanbali_fiqh/0/segments/bf3f5930-d1a0-41e9-a719-7238fecb7f66/: IDENTITY  LOG
qdrant_storage/collections/hanbali_fiqh/0/segments/eaa7707d-3980-4fa3-82de-b279732bc4dc/: IDENTITY  LOG
qdrant_storage/collections/maliki_fiqh/0/: replica_state.json
qdrant_storage/collections/maliki_fiqh/0/segments/080a8196-313e-4954-8666-77f61e2ab85e/: IDENTITY  LOG
qdrant_storage/collections/maliki_fiqh/0/segments/25e53eb7-b91b-4303-967a-b4a6546819ad/: IDENTITY  LOG
qdrant_storage/collections/maliki_fiqh/0/segments/281addf1-bd78-4b80-b1c1-bbd06e620f53/: IDENTITY  LOG
qdrant_storage/collections/maliki_fiqh/0/segments/5e55ebe5-cf60-4343-966a-a3c478d69d59/: IDENTITY  LOG
qdrant_storage/collections/maliki_fiqh/0/segments/74398629-2133-484e-9d70-97e02b5d43dd/: IDENTITY  LOG
qdrant_storage/collections/maliki_fiqh/0/segments/cd82a66a-1455-40fa-a91b-fb2f067285a8/: IDENTITY  LOG
qdrant_storage/collections/maliki_fiqh/0/segments/e5ade70f-9a40-418b-a96f-69d9947ca880/: IDENTITY  LOG
qdrant_storage/collections/maliki_fiqh/0/segments/fa92b081-4cb7-4e70-94dd-0bdd5d242414/: IDENTITY  LOG
qdrant_storage/collections/shafii_fiqh/0/segments/0333fc4a-7ef0-4210-89ca-ed02d819f8b5/: IDENTITY  LOG
qdrant_storage/collections/shafii_fiqh/0/segments/13409cd8-12ee-4e36-8625-c54e0884bcc1/: IDENTITY  LOG
qdrant_storage/collections/shafii_fiqh/0/segments/53518540-7490-47f6-8180-ab6bd77f2142/: IDENTITY  LOG
qdrant_storage/collections/shafii_fiqh/0/segments/7f5b11cd-27df-4f26-bff4-65851bcf4cf0/: IDENTITY  LOG
qdrant_storage/collections/shafii_fiqh/0/segments/ac9a948a-54f6-4899-b42e-1e790bacb878/: IDENTITY  LOG
qdrant_storage/collections/shafii_fiqh/0/segments/b7e69175-f3ee-4c0d-9339-cdaff1ddda2c/: IDENTITY  LOG
qdrant_storage/collections/shafii_fiqh/0/segments/e5f25bde-2de3-4e84-94aa-e81fb9f48842/: IDENTITY  LOG
redis_data/appendonlydir/: appendonly.aof.1.base.rdb
scrapers/: comprehensive_maliki_scraper.py  maliki_books_spider.py
scripts/: scrape_shamela_direct.py  setup_dev.sh  shamela_converter.py  shamela_converter_direct.py
scripts/node/: fetch_maliki_shamela.mjs  fetch_shamela_by_madhab.mjs
src/: __init__.py  config.py  exceptions.py  main.py
src/api_clients/: __init__.py  base_client.py  hadith_client.py  prayer_times_client.py  quran_client.py
src/middleware/: __init__.py  correlation.py  observability.py  rate_limiting.py  security.py
src/routers/: __init__.py  ai_router.py  hadith_router.py  metrics_router.py  prayer_times_router.py  quran_router.py  settings_router.py  upload_router.py
src/services/: __init__.py  cache_service.py  cached_content_service.py  dspy_rag_service.py  fiqh_rag_service.py  fiqh_scraper.py  gemini_service.py  hanafi_scraper.py  hanbali_scraper.py  local_llm_service.py  multi_llm_service.py  multi_madhab_scraper.py  ocr_service.py  ollama_service.py  orchestrator_service.py  rag_service.py  shafii_scraper.py  web_search_service.py
src/utils/: logging.py  question_classifier.py  retry.py
tests/: __init__.py  conftest.py  test_cache_service.py  test_gemini_service.py  test_hadith_client.py  test_multi_madhab.py  test_prayer_times_client.py  test_quran_client.py
(+66 files in other folders)
