[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "al-muwatta"
version = "1.0.0"
description = "Maliki Fiqh Assistant with RAG and Multi-LLM Support"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Hesham Haroon", email = "hesham@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Religion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PL",  # pylint
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B026",  # star-arg unpacking after keyword argument
    "B904",  # raise from exception chaining (stylistic)
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value used in comparison
    "PLW0603",  # global statement (acceptable for singletons)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["ARG001", "ARG004", "PLR2004", "F841"]  # unused arguments/vars, magic values in tests
"src/main.py" = ["ARG001", "F841"]  # FastAPI lifespan requires app param, unused client in health check
"src/middleware/__init__.py" = ["ARG001"]  # Exception handlers require request param
"src/middleware/rate_limiting.py" = ["ARG001"]  # Exception handlers require request param
"src/services/dspy_rag_service.py" = ["ARG004"]  # DSPy metric signature requires example/trace params
"src/services/fiqh_scraper.py" = ["ARG002", "F841"]  # Placeholder scraper with unused params
"src/services/local_llm_service.py" = ["E722"]  # Bare except for optional import fallback
"src/services/ocr_service.py" = ["ARG002", "F841"]  # Placeholder OCR service with unused params
"src/utils/question_classifier.py" = ["ARG001"]  # category param reserved for future use

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
    "slow: mark test as slow running",
    "unit: mark test as unit test",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection warnings

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

